tests/tests/ui/unsupported_rename_all_error.stderr
error: #[musli(name_all = "WHAT_IS_THIS")]: Bad value, expected one of "index", "name", "PascalCase", "camelCase", "snake_case", "SCREAMING_SNAKE_CASE", "kebab-case", "SCREAMING-KEBAB-CASE"
 --> tests/ui/unsupported_rename_all_error.rs:4:20
  |
4 | #[musli(name_all = "WHAT_IS_THIS")]
  |                    ^^^^^^^^^^^^^^
