tests/tests/ui/unsupported_rename_all_error.rs
use musli::{Encode, Decode};

#[derive(Encode, Decode)]
#[musli(name_all = "WHAT_IS_THIS")]
struct Struct {
    field: u32,
}

fn main() {
}

